[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "logi-auth"
dynamic = ["version"]
description = "Server-side \"Sign in with logi\" for Python/Django — confidential OAuth 2.0 + id_token (RS256) verification."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "Dcode" }]
keywords = ["logi", "1pass", "oauth", "oidc", "django", "auth", "openid", "id-token"]
dependencies = ["cryptography>=41.0"]

[project.urls]
Homepage = "https://github.com/dcode-co/logi-auth-python"
Issues = "https://github.com/dcode-co/logi-auth-python/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "logi_auth.__version__" }
